argocd/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.10.7
          ports:
            - containerPort: 8096
              protocol: TCP
          volumeMounts:
          - mountPath: /config
            name: jellyfin-config
          - mountPath: /cache
            name: jellyfin-cache
          - mountPath: "/mnt/media"
            name: media-nfs
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-pvc
        - name: media-nfs
          persistentVolumeClaim:
            claimName: media-nfs-pvc
