argocd/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: jellyfin-svc
  namespace: media
spec:
  selector:    
    app: radarr
  type: ClusterIP
  ports:  
  - name: http
    port: 8096
    targetPort: 8096
    protocol: TCP
